# ai-engineering-playground

./: ML0101EN-Clas-Decision-Trees-drug.ipynb  ML0101EN-Clas-Logistic-Reg-churn.ipynb  ML0101EN-Clus-K-Means-Customer-Seg.ipynb
bot/slack-gcp-function/: main.py  pyproject.toml  requirements.txt
classification/article-category/: categorise-articles.ipynb  category-samples.json  pyproject.toml
data-engineering/: README.md  docker-compose.yml
data-engineering/01-spark-demo/: demo-00.ipynb
data-engineering/03-functional-programming/: 01-intro-functional-programming.ipynb
data-engineering/04-ingenstion-and-data-formats/: .gitignore  article.json  article02.json  article_stripped.json  ingestion-and-data-formats.ipynb  resale-flat-prices-based-on-registration-date-from-mar-2012-to-dec-2014.parquet
data-engineering/06-ml-using-spark/: 02-workshop-lr-real-world.ipynb  03-classification-real-world.ipynb  PySpark_DecisionTreeClassifier_Iris.ipynb  PySpark_LinearRegression_Advertising_Data.ipynb  workshop10_donda_yusuf.ipynb  workshop_linear_regression.ipynb
data-engineering/07-redis-stream-celery/: .gitignore  Dockerfile  docker-compose.yml  main.py  requirements.txt  tasks.py
ibm_ai_engineering/: ML0101EN-Clas-K-Nearest-neighbors-CustCat.ipynb  ML0101EN-Clas-SVM-cancer.ipynb  ML0101EN-Reg-Mulitple-Linear-Regression-Co2.ipynb  ML0101EN-Reg-Simple-Linear-Regression-Co2.ipynb
lsu-pilot/: .gitignore  docker-compose.yml  pyproject.toml
lsu-pilot/data/: 001-noah-hein-en.txt  002-noah-hein-cn.txt
lsu-pilot/embedding/: embed.py
lsu-pilot/lsu_pilot/: Dockerfile  celery.py  functions.py  main.py  prompt.py  questions.py
lsu-pilot/processed/: embeddings.csv  scraped.csv
lsu-pilot/scripts/: app_entrypoint.sh  worker_entrypoint.sh
lsu-pilot/workers/: .dockerignore  Dockerfile  celery_app.py  task_handlers.py
rag-playground/cohere-rag/: pyproject.toml  rag-demo.ipynb
rest-api-model/: main.py  pyproject.toml
rest-api-model/models/: Prediction.py  SalesData.py
(+8 files in other folders)
