[tool.poetry]
name = "rest-api-model"
version = "0.1.0"
description = ""
authors = ["Donda Yusuf <dondasasmita@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"