[tool.poetry]
name = "cohere-rag"
version = "0.1.0"
description = ""
authors = ["Donda Yusuf <dondasasmita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
cohere = "^5.9.1"
hnswlib = "^0.8.0"
unstructured = "^0.15.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
